# smartPot

./: .gitignore  README.md  deploy.sh
backend/: build.gradle  settings.gradle
backend/src/main/java/com/garden/smartgarden/: SmartGardenApplication.java
backend/src/main/java/com/garden/smartgarden/aggregate/: SensorAggregateService.java
backend/src/main/java/com/garden/smartgarden/api/: SensorController.java
backend/src/main/java/com/garden/smartgarden/config/: MqttConfig.java  RedisConfig.java  SecurityConfig.java  SpaForwardingConfig.java  WebConfig.java
backend/src/main/java/com/garden/smartgarden/domain/: SensorReading.java
backend/src/main/java/com/garden/smartgarden/influx/: InfluxQueryService.java  InfluxWriter.java
backend/src/main/java/com/garden/smartgarden/mqtt/: MqttMessageHandler.java
backend/src/main/java/com/garden/smartgarden/sse/: SseBroadcastService.java
backend/src/main/resources/: application.yml
backend/src/main/resources/static/: index.html
backend/src/main/resources/static/assets/: index-CAesIjDa.css  index-qGCP0ABR.js
backend/src/test/java/com/garden/smartgarden/: SmartGardenApplicationTests.java
bridge/: Cargo.toml
bridge/src/: bridge.rs  config.rs  influx.rs  main.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: HistoryChart.tsx  StatCard.tsx
frontend/src/hooks/: useSensorStream.ts
