[package]
name = "garden-bridge"
version = "0.1.0"
edition = "2021"
description = "Smart Garden MQTT→Redis+InfluxDB bridge"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
rumqttc = "0.24"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
